refs #92 fix UNIX time toggle layout on mobile by moving toggle below heading

--- a/src/app/pages/unix-timestamp-converter-page/unix-timestamp-input-card/unix-timestamp-input-card.component.scss
+++ b/src/app/pages/unix-timestamp-converter-page/unix-timestamp-input-card/unix-timestamp-input-card.component.scss
@@ -36,6 +36,7 @@
 
 .mode-toggle {
   margin: 8px 0;
+  display: block;
 
   ::ng-deep .mat-button-toggle-button {
     height: 24px;
